[gd_scene load_steps=5 format=3 uid="uid://chud00000001"]

[ext_resource type="Script" uid="uid://idfl4ap10dgt" path="res://scripts/ui/hud.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.1, 0.1, 0.15, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hotbar"]
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0
bg_color = Color(0.08, 0.08, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 0.8)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_game_over"]
content_margin_left = 40.0
content_margin_top = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color(0.05, 0.05, 0.1, 0.95)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1146.0
offset_bottom = 50.0
theme_override_constants/separation = 20

[node name="CurrencyLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üí∞ 100"

[node name="LivesLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚ù§Ô∏è 20"

[node name="WaveLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Wave: 0"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartWaveButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Start Wave"

[node name="TowerHotbar" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hotbar")

[node name="HBox" type="HBoxContainer" parent="TowerHotbar"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_game_over")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ResultLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîÑ Restart Level"

[node name="MainMenuButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üè† Main Menu"

